--- a/abastecimentos/src/main/resources/application-test.properties
+++ b/abastecimentos/src/main/resources/application-test.properties
@@ -1,8 +1,9 @@
 # Dados de conexão com o banco H2
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./src/main/resources/data/database
 spring.datasource.username=sa
 spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
 
 # H2 Client
 spring.h2.console.enabled=true
@@ -13,6 +14,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
 
 spring.output.ansi.enabled=ALWAYS
 
