--- a/pontos-de-interesse/src/main/resources/application-test.properties
+++ b/pontos-de-interesse/src/main/resources/application-test.properties
@@ -3,7 +3,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # H2 Client
 spring.h2.console.enabled=true
