--- a/transacoes-estatisticas/pom.xml
+++ b/transacoes-estatisticas/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>hibernate-validator</artifactId>
             <version>8.0.1.Final</version> <!-- Or the latest version -->
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
 	</dependencies>
 
 	<build>
